--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Home - Ole Sereni Hotel</title>
+  <title>Home - Nyassacre Hotel</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
          <img src="assets/img/Untitled.jpeg" alt="">
-        <h1 class="sitename">Ole Sereni Hotel</h1>
+        <h1 class="sitename">Nyassacre Hotel</h1>
         <span>.</span>
       </a>
 
